홈 메인 변경 공지사항 추가

--- a/app/src/main/res/drawable/btn_ripple_colored.xml
+++ b/app/src/main/res/drawable/btn_ripple_colored.xml
@@ -3,13 +3,13 @@
 
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/DarkGreenalpha"></solid>
+            <solid android:color="@color/DarkGreenalpha"/>
         </shape>
     </item>
 
     <item>
         <shape>
-            <!--<solid android:color="@color/DarkGreenalpha"></solid>-->
+
         </shape>
     </item>
 
