--- a/app/src/main/res/layout/activity_community_question_photo.xml
+++ b/app/src/main/res/layout/activity_community_question_photo.xml
@@ -61,6 +61,18 @@
             />
 
         <ImageView
+            android:id="@+id/question_photo_img1_close"
+            android:src="@drawable/icons8_multiply_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:onClick="@{onClickListener::onClick}"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/question_photo_img1"
+            app:layout_constraintBottom_toBottomOf="@id/question_photo_img1"
+            />
+
+        <ImageView
             android:id="@+id/question_photo_img2"
             android:layout_width="0dp"
             android:layout_height="100dp"
@@ -68,7 +80,18 @@
             app:layout_constraintEnd_toStartOf="@id/question_photo_img3"
             app:layout_constraintStart_toEndOf="@id/question_photo_img1"
             app:layout_constraintTop_toBottomOf="@id/question_photo_title"
+            />
 
+        <ImageView
+            android:id="@+id/question_photo_img2_close"
+            android:src="@drawable/icons8_multiply_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:padding="5dp"
+            android:onClick="@{onClickListener::onClick}"
+            app:layout_constraintEnd_toEndOf="@id/question_photo_img2"
+            app:layout_constraintBottom_toBottomOf="@id/question_photo_img2"
             />
 
         <ImageView
@@ -80,6 +103,17 @@
             app:layout_constraintStart_toEndOf="@id/question_photo_img2"
             app:layout_constraintTop_toBottomOf="@id/question_photo_title"
             />
+        <ImageView
+            android:id="@+id/question_photo_img3_close"
+            android:src="@drawable/icons8_multiply_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:onClick="@{onClickListener::onClick}"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/question_photo_img3"
+            app:layout_constraintBottom_toBottomOf="@id/question_photo_img3"
+            />
 
         <ImageView
             android:id="@+id/question_photo_img4"
@@ -89,6 +123,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/question_photo_img3"
             app:layout_constraintTop_toBottomOf="@id/question_photo_title"
+            />
+        <ImageView
+            android:id="@+id/question_photo_img4_close"
+            android:src="@drawable/icons8_multiply_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:onClick="@{onClickListener::onClick}"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/question_photo_img4"
+            app:layout_constraintBottom_toBottomOf="@id/question_photo_img4"
             />
 
         <View
