--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -29,7 +29,7 @@
         <TextView
             android:id="@+id/setting_view_titlebar"
             style="@style/titlebarNoText"
-            android:text="정보"
+            android:text="유저"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -51,9 +51,9 @@
             settingImageUrl="@{item.UserProfile}"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:padding="5dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="25dp"
-            android:background="@drawable/btn_grey_circle_border"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/setting_view_titlebar"
 
@@ -183,13 +183,12 @@
             android:layout_marginBottom="0.3dp"
             android:layout_marginTop="15dp"
             android:background="@drawable/btn_grey_rec"
-            android:elevation="0dp"
             android:gravity="center_vertical"
             android:onClick="@{onClickListener::onClick}"
             android:paddingStart="15dp"
             android:text="프로필 사진 변경"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@id/setting_btn_notification"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -203,13 +202,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="0.3dp"
             android:background="@drawable/btn_grey_rec"
-            android:elevation="0dp"
             android:gravity="center_vertical"
             android:onClick="@{onClickListener::onClick}"
             android:paddingStart="15dp"
             android:text="공지사항"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@id/setting_btn_errors"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -222,13 +220,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="0.3dp"
             android:background="@drawable/btn_grey_rec"
-            android:elevation="0dp"
             android:gravity="center_vertical"
             android:onClick="@{onClickListener::onClick}"
             android:paddingStart="15dp"
             android:text="문의 하기"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@id/setting_btn_out"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -243,13 +240,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="7.6dp"
             android:background="@drawable/btn_grey_rec"
-            android:elevation="0dp"
             android:gravity="center_vertical"
             android:onClick="@{onClickListener::onClick}"
             android:paddingStart="15dp"
             android:text="로그아웃"
-            android:textColor="@color/titleReverse"
-            android:textSize="15sp"
+            android:textColor="#F44336"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/setting_btn_errors"
