--- a/app/src/main/res/layout/item_bottom_layout.xml
+++ b/app/src/main/res/layout/item_bottom_layout.xml
@@ -166,7 +166,7 @@
             android:id="@+id/bottom_layout_btn3_txt"
             android:layout_width="0dp"
             android:layout_height="20dp"
-            android:src="@drawable/icons8_user_24"
+            android:src="@drawable/icons8_user_menu_male_24"
             android:text="설정"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread"
