--- a/app/src/main/res/layout/item_community_inner.xml
+++ b/app/src/main/res/layout/item_community_inner.xml
@@ -23,67 +23,70 @@
         >
 
 
+        <ImageView
+            android:id="@+id/comment_img_profile"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            app:CommunityInnerThumbnailImageUrl="@{item.image}"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+
         <TextView
             android:id="@+id/comment_text_nickname"
             android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_marginStart="15dp"
-
-            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
             android:gravity="center_vertical"
             android:text="@{item.nickname}"
             android:textColor="@color/black"
-
-            android:textSize="13sp"
+            android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/comment_img_profile"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="홍석기"
             />
 
         <TextView
             android:id="@+id/comment_text_time"
-            android:layout_width="0dp"
-            android:layout_height="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="3dp"
             android:gravity="center_vertical"
-            android:textColor="@color/darkGrey"
-            android:textSize="12sp"
             android:text="@{item.time}"
-            app:layout_constraintStart_toEndOf="@id/comment_text_nickname"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/darkGrey"
+            android:textSize="11sp"
+            app:layout_constraintStart_toEndOf="@id/comment_img_profile"
+            app:layout_constraintTop_toBottomOf="@id/comment_text_nickname"
+
             tools:text="7시 30 분"
             />
 
-        <ImageView
-            android:id="@+id/comment_img_like"
-            android:layout_width="50dp"
-            android:layout_height="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/outline_thumb_up_alt_black_24dp"
-            android:layout_marginBottom="25dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="10dp"
-            />
 
         <TextView
             android:id="@+id/comment_text_comment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="3dp"
             android:gravity="center_vertical"
             android:text="@{item.comment}"
-            android:textSize="14sp"
             android:textColor="@color/colorPrimaryDark"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/comment_img_like"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/comment_text_nickname"
-            android:layout_marginBottom="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/comment_img_profile"
+            app:layout_constraintTop_toBottomOf="@id/comment_text_time"
+
             tools:text="여기 구나"
             />
 
