--- a/app/src/main/res/layout/item_navi_question.xml
+++ b/app/src/main/res/layout/item_navi_question.xml
@@ -66,7 +66,6 @@
             android:background="@drawable/btn_grey_border"
             android:padding="6dp"
             android:onClick="@{onClickListener::onClick}"
-            tools:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/navi_text_title"
@@ -102,7 +101,7 @@
             android:id="@+id/navi_btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_color_border"
+            android:background="@color/btn"
             android:onClick="@{onClickListener::onClick}"
             android:text="등록"
             android:textColor="#fff"
