--- a/app/src/main/res/layout/item_question_photos.xml
+++ b/app/src/main/res/layout/item_question_photos.xml
@@ -33,6 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            tools:src="@drawable/test_10"
             />
 
 
