--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,9 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
     <style name="CustomAppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <!--<item name="colorPrimary">@color/colorPrimary</item>-->
-        <item name="colorPrimaryDark">#548BB3</item>
+        <item name="colorPrimaryDark">@color/statusbar</item>
         <!--<item name="colorAccent">@color/colorAccent</item>-->
         <!--<item name="colorPrimary">@color/colorPrimary</item>-->
         <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
@@ -38,11 +30,6 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="MyRadioButton" parent="Theme.AppCompat.Light">
-        <item name="colorControlNormal">@color/midGey</item>
-        <item name="colorControlActivated">@color/black</item>
-    </style>
-
     <style name="pictureTitlebar">
 
         <item name="android:textColor">@color/white</item>
@@ -63,6 +50,16 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@color/titleColor</item>
+    </style>
+
+    <style name="timestamp">
+
+        <item name="android:textSize">12sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">25dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/darkGrey</item>
+
     </style>
 
 </resources>
